Fix alignment of header and footer

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -22,7 +22,9 @@
   color: black;
 }
 
-.footerCenterPart > * {
+.footerCenterPart > :nth-child(2),
+.footerCenterPart > :nth-child(3),
+.footerCenterPart > :nth-child(4) {
   margin-top: 3%;
 }
 
