--- a/src/components/SoundSwitchButton/SoundSwitchButton.module.css
+++ b/src/components/SoundSwitchButton/SoundSwitchButton.module.css
@@ -3,27 +3,22 @@
   border: none;
   padding: 0;
   cursor: pointer;
-  width: 40px;
+  width: 33px;
 }
 
-.soundSwitchButton > svg > g > line:nth-child(1) {
-  stroke-width: 44px;
-  stroke-linecap: square;
-  stroke-opacity: 100%;
-  transition: stroke-dashoffset 0.5s ease;
-}
-
+.soundSwitchButton > svg > g > line:nth-child(1),
 .soundSwitchButton > svg > g > line:nth-child(2) {
   stroke-width: 44px;
   stroke-linecap: square;
+  transition: stroke-opacity 1s ease;
+}
+
+.soundSwitchButton.active > svg > g > line:nth-child(1),
+.soundSwitchButton.active > svg > g > line:nth-child(2) {
   stroke-opacity: 100%;
-  transition: stroke-opacity 0.5s ease;
 }
 
-.soundSwitchButton.active > svg > g > line:nth-child(1) {
-  stroke-opacity: 0%;
-}
-
+.soundSwitchButton.active > svg > g > line:nth-child(1),
 .soundSwitchButton.active > svg > g > line:nth-child(2) {
   stroke-opacity: 0%;
 }
